Split into two test fixtures

--- a/SampleTests/SampleTests.csproj
+++ b/SampleTests/SampleTests.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GoogleTests.cs" />
+    <Compile Include="JavaScriptTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
